# Magic-Insoles

./: .gitignore
.cursor/: README.md
.cursor/inputs/: README.md
.cursor/issues/: README.md  TEMPLATE.md
.cursor/memories/: README.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.cursor/pricing/: bak.md  pricing.csv  pricing.md
.cursor/rules/: dependency-management.mdc  website-design.mdc
.cursor/tasks/: 2026-07-06-backend-implementation.md  2026-07-09-boundary-gait-viz.md  2026-07-09-cop-trajectory-angle.md  2026-07-09-preserve-insoles-boundary.md  2026-07-09-reorganize-win-datacap.md  README.md  TEMPLATE.md
TODO/: backend.md
backend/: DEPRECATED.md  main.py
backend_prod/: .env.example  config.py  database.py  llm_config.yml  main.py  requirements.txt
backend_prod/api/: activity.py  deps.py  gait.py  gps.py  (+2 more)
deploy/: deploy.ps1  magic-insoles-api-fake.service  magic-insoles-api.service  nginx.conf  server-init.sh
doc/: README.md  data-protocol.md  deployment.md  design-overview.md  frontend.md  project-context.md  software-architecture.md
frontend/: .env.production.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
win-datacap/: README.md  force_server.py  fsr_calibrate.py  modbus_rtu.py  plot_fsr_fit.py  plot_fsr_grid_fit.py  requirements.txt  serial_test.py
win-datacap/bak/: CMakeLists.txt  client.py  server.cpp  usb-daq-v20.cpp  usb-daq-v20.h
win-datacap/bak/bak/: plot_curve.py  plot_tactile.py  twoPlotNew.py  two_plot_tactile.py  usb_daq_test.c
(+286 files in other folders)
